--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@ html, body {
     background-position: center;
     background-repeat: no-repeat;
     /* Global text color: readable green */
-    color: #000000;
+    color: #2bff00;
 }
 
 /* Prefer WebP via image-set when supported */
 @supports (background-image: image-set(url("a.webp") type("image/webp"))) {
     html, body {
         background-image: image-set(
-          url("assets/img/crem.jpg") type("image/jpeg")
+          url("assets/img/george.jpg") type("image/jpeg")
         );
     }
 }
@@ -124,7 +124,7 @@ nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  border: 1px solid black;
+  border: 1px solid rgb(255, 0, 0);
 }
 
 nav ul li {
